--- a/Semana 1/index.html
+++ b/Semana 1/index.html
@@ -72,7 +72,7 @@
 
   document.write(cliche)
 
-  var bgcolorlist=new Array("#004358", "#138D90", "#14294A", "#FF8C00", "#FF4E3E", "#FD3C3C", "#04C750")
+  var bgcolorlist=new Array("#004358", "#138D90", "#14294A", "#FF8C00", "#FF4E3E", "#FD3C3C")
 
 document.body.style.background=bgcolorlist[Math.floor(Math.random()*bgcolorlist.length)]
 
