--- a/Semana 4/index.html
+++ b/Semana 4/index.html
@@ -24,12 +24,12 @@
 		</a>
 	
 
-		<a href="images/cuadrado.jpg" class="btn2" target="_blank">
+		<a href="images/cuadrado.jpg" class="btn2">
 			 Cuadrado
 		</a>
 
 
-		<a href="images/circulo.jpg" class="btn3" target="_blank">
+		<a href="images/circulo.jpg" class="btn3">
 			 C&iacute;rculo
 		</a>
 	</div>
