Corrección falta ortografica

--- a/Semana 4/index.html
+++ b/Semana 4/index.html
@@ -11,7 +11,7 @@
 	
 
 <h1> UN COLOR PARA CADA FORMA </h1>
-<p> En el año 1923, el artista y profesor Wassily Kandinsky realiz&oacute; un experimento en La Bauhaus, pidiendo a los participantes que colorearan un triángulo, un círculo y un cuadrado con el color primario que consideraran correspondiente. A trav&eacute;s de esto, pretend&iacute; descubrir una teoría universal de relaci&oacute;n entre forma y color. </p>
+<p> En el año 1923, el artista y profesor Wassily Kandinsky realiz&oacute; un experimento en La Bauhaus, pidiendo a los participantes que colorearan un triángulo, un círculo y un cuadrado con el color primario que consideraran correspondiente. A trav&eacute;s de esto, pretend&iacute;a descubrir una teoría universal de relaci&oacute;n entre forma y color. </p>
 <br>
 <br>
 
