--- a/Semana 4/index.html
+++ b/Semana 4/index.html
@@ -19,17 +19,17 @@
 
 	<div class="container"> 
 
-		<a href="images/triangulo.jpg" class="btn1" >
+		<a href="images/triangulo.jpg" class="btn1" target="_blank" >
 			 Tri&aacute;ngulo
 		</a>
 	
 
-		<a href="images/cuadrado.jpg" class="btn2">
+		<a href="images/cuadrado.jpg" class="btn2" target="_blank" >
 			 Cuadrado
 		</a>
 
 
-		<a href="images/circulo.jpg" class="btn3">
+		<a href="images/circulo.jpg" class="btn3" target="_blank">
 			 C&iacute;rculo
 		</a>
 	</div>
