--- a/Semana 4/index.html
+++ b/Semana 4/index.html
@@ -15,7 +15,7 @@
 <br>
 <br>
 
-<p>Haz click en cada bot&oacute;n para descubrir cu&aacute;l fue la respuesta m&aacute;s com&uacute;n. </p>
+<p>Haz click en cada bot&oacute;n para descubrir la respuesta m&aacute;s com&uacute;n. </p>
 
 	<div class="container"> 
 
