--- a/Semana 9/index.html
+++ b/Semana 9/index.html
@@ -97,7 +97,7 @@
 </div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-        <script src="js/index.js"></script>
+        <script src="https://github.com/vanessavc/Web2/blob/master/Semana%209/js/index.js"></script>
 
     
     
