--- a/Semana 10/index.html
+++ b/Semana 10/index.html
@@ -92,6 +92,7 @@
 <br>
 <br>
 
+
 		<label>E-mail</label><br>
 		<input name="email" type="text" placeholder="ejemplo@ejemplo.com">
     
@@ -100,11 +101,33 @@
 
 		<label>Celular</label><br>
 		<input name="phone" type="text" id="phone_number">
-
 <br>
-		<br>
+<br>
+ <label>Procedencia del pedido</label>
+ <br>
+      <select class="form-control">
+<br>
 
-		<label>Mensaje</label><br>
+      <option>Impresos Castro</option>
+      <option>Supermercados Jumbo</option>
+      <option>Parada Sichoem</option>
+      <option>Papeler&iacute;a La Romana</option>
+      <option>Taller de Serigraf&iacute;a</option>
+      <option>Oficina Escuela de Diseño</option>
+      <option>Lab</option>
+      <option>Mercadito</option>
+      <option>Aulas</option>
+      <option>Onnos</option>
+      <option>Fresh Fresh</option>
+      <option>OTRO</option>
+  <input name="address" type="text" placeholder="Nombre/N&uacute;mero">
+</select>
+<br>
+
+		<br>
+		<label>Descripci&oacute;n del pedido</label>
+    <br>
+    <br>
 		<textarea name="message" id="" cols="80" rows="6"></textarea>
 		<br>
     <br>
@@ -114,6 +137,8 @@
     <input type="file" name="file" id="exampleInputFile">
   <br>
   <br>
+
+
   <div class="checkbox">
     <label>&iquest;Quieres enterarte de cuando salga tu pedido? </label>
     <br>
@@ -123,6 +148,7 @@
     </label>
 <br>
     <button form="myform" type="submit" class="send"><img src="images/arrow.svg" alt="info">ENVIAR</button>
+
 
 
 
