--- a/Semana 11/index.html
+++ b/Semana 11/index.html
@@ -5,6 +5,11 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Kreon:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Walter+Turncoat' rel='stylesheet' type='text/css'>
+
+
+ <link rel="stylesheet" href="css/style.css">
+
+
   </head>
   <body>
     <div class="container">
