--- a/Semana 11/index.html
+++ b/Semana 11/index.html
@@ -3,13 +3,9 @@
   <head>
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp2/css/bootstrap.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Kreon:300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Walter+Turncoat' rel='stylesheet' type='text/css'>
-
-
- <link rel="stylesheet" href="css/style.css">
-
-
   </head>
   <body>
     <div class="container">
